--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -48,3 +48,22 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+.pagination li:not(.active):hover {
+  background-color: #e9ecef;
+}
+
+.pagination li.active {
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.pagination li.active a {
+  color: #fff !important;
+  font-weight: 500;
+}
+
+.pagination li.active:hover {
+  background-color: #0d6efd !important;
+  border-color: #0d6efd !important;
+}
